--- a/styles.css
+++ b/styles.css
@@ -154,8 +154,10 @@ body,html{
     padding: 20px;
     text-align: center;
     border: 1px solid white;
+    transition: transform 0.3s ease;
 }
 .box1:hover{
+    transform: scale(1.03) ;
     border: 1px solid yellow;
 }
 
